--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_bloc: ^8.1.3
+  rxdart: ^0.27.7
+  shared_preferences: ^2.1.2
+  json_annotation: ^4.8.1
+  equatable: ^2.0.5
   flutter_svg: ^2.0.5
   flutter:
     sdk: flutter
@@ -38,6 +43,9 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.2
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
@@ -53,6 +61,13 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/icons/ic_launcher.png"
+  adaptive_icon_foreground: "lib/assets/icons/ic_launcher_foreground.png"
+  adaptive_icon_background: "lib/assets/icons/ic_launcher_background.png"
 
 # The following section is specific to Flutter packages.
 flutter:
