--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  uuid: ^3.0.7
   flutter_bloc: ^8.1.3
   rxdart: ^0.27.7
   shared_preferences: ^2.1.2
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   flutter_svg: ^2.0.5
+  logger: ^1.4.0
   flutter:
     sdk: flutter
 
@@ -61,13 +63,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "lib/assets/icons/ic_launcher.png"
-  adaptive_icon_foreground: "lib/assets/icons/ic_launcher_foreground.png"
-  adaptive_icon_background: "lib/assets/icons/ic_launcher_background.png"
 
 # The following section is specific to Flutter packages.
 flutter:
