--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  device_info_plus: ^8.2.2
+  pretty_dio_logger: ^1.3.1
+  dio: ^5.2.1+1
   intl: ^0.17.0
   uuid: ^3.0.7
   flutter_bloc: ^8.1.3
