--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,13 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+isar_version: &isar_version ^3.1.0+1
+
 dependencies:
+  isar: *isar_version
+  isar_flutter_libs: *isar_version
+  path_provider: ^2.0.15
   device_info_plus: ^8.2.2
   pretty_dio_logger: ^1.3.1
   dio: ^5.2.1+1
@@ -49,6 +55,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  isar_generator: *isar_version
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   flutter_launcher_icons: ^0.13.1
