--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 isar_version: &isar_version ^3.1.0+1
 
 dependencies:
+  easy_localization: ^3.0.2
   isar: *isar_version
   isar_flutter_libs: *isar_version
   path_provider: ^2.0.15
@@ -86,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/images/
+    - lib/assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
