fix deeplinks in manifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="http" android:host="darkwolf.com/todo"/>
-                <data android:scheme="https"/>
+                <data android:scheme="https" android:host="darkwolf.com/todo"/>
                 <data android:scheme="darkwolf" android:host="todo"/>
             </intent-filter>
         </activity>
