move backend settings to env

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 isar_version: &isar_version ^3.1.0+1
 
 dependencies:
+  flutter_dotenv: ^5.1.0
   get_it: ^7.6.0
   mockito: ^5.4.2
   provider: ^6.0.5
@@ -91,6 +92,8 @@ flutter:
   assets:
     - assets/images/
     - assets/translations/
+    - template.env
+    - url_token.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
