--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
   flutter_launcher_icons: ^0.13.1
+  test: ^1.21.4
   flutter_test:
     sdk: flutter
 
