--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dev_dependencies:
   json_serializable: ^6.6.2
   flutter_launcher_icons: ^0.13.1
   test: ^1.21.4
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
