--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,8 +32,8 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="darkwolf.com/todo"/>
-                <data android:scheme="https" android:host="darkwolf.com/todo"/>
+                <data android:scheme="http" android:host="todo"/>
+                <data android:scheme="https" android:host="todo"/>
                 <data android:scheme="darkwolf" android:host="todo"/>
             </intent-filter>
         </activity>
