--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ isar_version: &isar_version ^3.1.0+1
 
 dependencies:
   freezed_annotation: ^2.2.0
+  firebase_remote_config: ^4.2.3
+  firebase_analytics: ^10.4.3
   firebase_crashlytics: ^3.3.3
   firebase_core: ^2.14.0
   flutter_dotenv: ^5.1.0
