--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,8 +102,7 @@ flutter:
   assets:
     - assets/images/
     - assets/translations/
-    - template.env
-    - url_token.env
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
