--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,29 +19,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Flutter
+      - name: 'Setup Flutter'
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
-      - name: Set env
+      - name: 'Set env'
         run: |
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> $GITHUB_ENV
           echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
 
-      - name: Pub get
+      - name: 'Pub get'
         run: flutter pub get
 
       - name: Formatting
         run: dart format --set-exit-if-changed .
 
-      - name: Codegen
+      - name: 'Codegen'
         run: |
           dart run build_runner build --delete-conflicting-outputs
           dart run easy_localization:generate -f keys -o locale_keys.g.dart -O "lib/l10n" -S "assets/translations"
           dart run easy_localization:generate -S "assets/translations" -O "lib/l10n"
 
-      - name: Analyze
+      - name: 'Analyze'
         run: flutter analyze --no-fatal-infos
 
   test:
@@ -52,26 +52,58 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup java-version
+      - name: 'Setup java'
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '12.x'
           cache: gradle
 
-      - name: Setup Flutter
+      - name: 'Setup Flutter'
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
-      - name: Pub get
+      - name: 'Pub get'
         run: flutter pub get
 
-      - name: Codegen
+      - name: 'Codegen'
         run: |
           dart run build_runner build --delete-conflicting-outputs
           dart run easy_localization:generate -f keys -o locale_keys.g.dart -O "lib/l10n" -S "assets/translations"
           dart run easy_localization:generate -S "assets/translations" -O "lib/l10n"
 
-      - name: Test
+      - name: 'Test'
         run: flutter test
+
+  build:
+    timeout-minutes: 20
+    name: 'build Android app and deploy it'
+    runs-on: ubuntu-latest
+    needs:
+      - analyze
+      - test
+
+    steps:
+      - name: 'Set env'
+        run: |
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> $GITHUB_ENV
+          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+
+      - name: 'Pub get'
+        run: flutter pub get
+
+      - name: 'Codegen'
+        run: |
+          dart run build_runner build --delete-conflicting-outputs
+          dart run easy_localization:generate -f keys -o locale_keys.g.dart -O "lib/l10n" -S "assets/translations"
+          dart run easy_localization:generate -S "assets/translations" -O "lib/l10n"
+          
+      - name: 'Build APK'
+        run: flutter build apk --release
+
+      - name: Deploy APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: ToDo-Release
+          path: build/app/outputs/flutter-apk/
