--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,7 +50,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
 
         //minSdkVersion flutter.minSdkVersion
-        minSdkVersion localProperties.getProperty('flutter.minSdkVersion').toInteger()
+        //minSdkVersion localProperties.getProperty('flutter.minSdkVersion').toInteger()
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
