--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ environment:
 isar_version: &isar_version ^3.1.0+1
 
 dependencies:
+  envied: ^0.3.0+3
   freezed_annotation: ^2.2.0
   firebase_remote_config: ^4.2.3
   firebase_analytics: ^10.4.3
   firebase_crashlytics: ^3.3.3
   firebase_core: ^2.14.0
-  flutter_dotenv: ^5.1.0
   get_it: ^7.6.0
   mockito: ^5.4.2
   provider: ^6.0.5
@@ -66,6 +66,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  envied_generator: ^0.3.0+3
   freezed: ^2.3.5
   isar_generator: *isar_version
   build_runner: ^2.3.3
