--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,33 @@ jobs:
         with:
           channel: 'stable'
 
+      - name: 'Set env'
+        run: |
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> $GITHUB_ENV
+          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_WEB=${{ secrets.FIREBASE_API_KEY_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_WEB=${{ secrets.FIREBASE_APP_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_WEB=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_WEB=${{ secrets.FIREBASE_PROJECT_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_AUTH_DOMAIN_WEB=${{ secrets.FIREBASE_AUTH_DOMAIN_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_WEB=${{ secrets.FIREBASE_STORAGE_BUCKET_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_MEASUREMENT_ID_WEB=${{ secrets.FIREBASE_MEASUREMENT_ID_WEB }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_ANDROID=${{ secrets.FIREBASE_API_KEY_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_ANDROID=${{ secrets.FIREBASE_APP_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_ANDROID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_ANDROID=${{ secrets.FIREBASE_PROJECT_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_ANDROID=${{ secrets.FIREBASE_STORAGE_BUCKET_ANDROID }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_IOS=${{ secrets.FIREBASE_API_KEY_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_IOS=${{ secrets.FIREBASE_APP_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_IOS=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_IOS=${{ secrets.FIREBASE_PROJECT_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_IOS=${{ secrets.FIREBASE_STORAGE_BUCKET_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_IOS_CLIENT_ID_IOS=${{ secrets.FIREBASE_IOS_CLIENT_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_IOS_BUNDLE_ID_IOS=${{ secrets.FIREBASE_IOS_BUNDLE_ID_IOS }}" >> $GITHUB_ENV
+
       - name: 'Pub get'
         run: flutter pub get
 
@@ -58,6 +85,33 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+
+      - name: 'Set env'
+        run: |
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> $GITHUB_ENV
+          echo "AUTH_TOKEN=${{ secrets.AUTH_TOKEN }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_WEB=${{ secrets.FIREBASE_API_KEY_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_WEB=${{ secrets.FIREBASE_APP_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_WEB=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_WEB=${{ secrets.FIREBASE_PROJECT_ID_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_AUTH_DOMAIN_WEB=${{ secrets.FIREBASE_AUTH_DOMAIN_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_WEB=${{ secrets.FIREBASE_STORAGE_BUCKET_WEB }}" >> $GITHUB_ENV
+          echo "FIREBASE_MEASUREMENT_ID_WEB=${{ secrets.FIREBASE_MEASUREMENT_ID_WEB }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_ANDROID=${{ secrets.FIREBASE_API_KEY_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_ANDROID=${{ secrets.FIREBASE_APP_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_ANDROID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_ANDROID=${{ secrets.FIREBASE_PROJECT_ID_ANDROID }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_ANDROID=${{ secrets.FIREBASE_STORAGE_BUCKET_ANDROID }}" >> $GITHUB_ENV
+
+          echo "FIREBASE_API_KEY_IOS=${{ secrets.FIREBASE_API_KEY_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_APP_ID_IOS=${{ secrets.FIREBASE_APP_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_MESSAGING_SENDER_ID_IOS=${{ secrets.FIREBASE_MESSAGING_SENDER_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_PROJECT_ID_IOS=${{ secrets.FIREBASE_PROJECT_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_STORAGE_BUCKET_IOS=${{ secrets.FIREBASE_STORAGE_BUCKET_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_IOS_CLIENT_ID_IOS=${{ secrets.FIREBASE_IOS_CLIENT_ID_IOS }}" >> $GITHUB_ENV
+          echo "FIREBASE_IOS_BUNDLE_ID_IOS=${{ secrets.FIREBASE_IOS_BUNDLE_ID_IOS }}" >> $GITHUB_ENV
 
       - name: 'Pub get'
         run: flutter pub get
