--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,20 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+            resValue "string", "app_name", "To-Do! [DEV]"
+            applicationIdSuffix ".dev"
+        }
+        prod {
+            dimension "default"
+            resValue "string", "app_name", "To-Do!"
+            applicationIdSuffix ""
+        }
+    }
 }
 
 flutter {
